# nirukta

./: .gitignore  README.md  demo.py  flake.nix  main.py  models.py  nirukta.py  parser.py  patches.py  pyproject.toml  test.py  test_sandhi.py  typst_output.py  validate.py
blueprints/: test.sloka
blueprints/sUtrARi/: SrIsarasvatIstotraM.sutra
nirukta/: cache.py  chandas.py  constants.py  nirukta.py  patches.py  render.py  sloka.py  typst.py  util.py
nirukta/gui/: file_picker.py
nirukta/models/: __init__.py  enums.py  gloss.py
nirukta/models/presentation/: akshara.py  line.py  sloka.py  utterance.py
nirukta/models/tokens/: __init__.py  base.py  compound.py  display.py  punctuation.py  token.py
nirukta/parsing/: grammars.py
nirukta/parsing/visitors/: sloka.py  sutra.py
nirukta/timelines/: __init__.py  english.py  explain_sloka.py  introduce_quad.py  introduce_sloka.py  quadrants.py  recitation.py  sloka_file.py  sutra_file.py  thumbnail.py  transform.py  utterance.py
slokas/: tEttirIyopanizade_2.2.2.sloka  taittirIyopaniSade_2.2.2.2.2.sloka  taittirIyopaniSade_2.2.2.2.sloka
slokas/suBAzita/: paropakArAya.sloka
