[project]
name = "nirukta"
version = "0.1.0"
description = "Procedurally generated Sanskrit grammar animations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aksharamukha>=2.3",
  "dill>=0.4.1",
  "janim[gui]>=4.1.0",
  "parsimonious>=0.11.0",
  "skrutable>=2.6.3",
  "vidyut>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
