[project]
name = "nirukta"
version = "0.1.0"
description = "Procedurally generated Sanskrit grammar animations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aksharamukha>=2.3",
  "nirukta-inflect",
  "dill>=0.4.1",
  "janim[gui]>=4.2.0",
  "parsimonious>=0.11.0",
  "sandhi>=1.0.0",
  "skrutable>=2.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
nirukta-inflect = { git = "https://github.com/recursivepaws/nirukta-inflect" }
